--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,15 @@
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/maker-bundle": "^1.33",
         "symfony/runtime": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
+        "symfony/phpunit-bridge": "^5.3"
     },
     "config": {
         "optimize-autoloader": true,
